--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <div id="cabecera"></div>
         <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de
+                    confianza</span>
+            </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blog post</h1>
                 <p>Y este es el parrafo de inicio</p>
