--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">Tu blog de
-                    confianza</span>
+                    maestro</span>
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blog post</h1>
@@ -16,6 +16,7 @@
                 <p>Este es otro párrafo </p>
                 <h1>Aqui vamos a hacer un blog post</h1>
                 <p>Y este es el parrafo de inicio</p>
+                <p>subcribete y dale like</p>
             </div>
         </div>
     </body>
