Una versión de el hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,23 +1,26 @@
 <html>
-    <head>
-        <title>Bienvenido a Hyperblog</title>
-        <link rel="stylesheet" href="css/estilos.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="cabecera">
-                Hyperblog
-                <span id="tagline">Tu blog de
+
+<head>
+    <title>Bienvenido a Hyperblog 2.0</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+    <div id="container">
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de
                     cabecera</span>
-            </div>
-            <div id="post">
-                <h1>Aqui vamos a hacer un blog post</h1>
-                <p>Y este es el parrafo de inicio</p>
-                <p>Este es otro párrafo </p>
-                <h1>Aqui vamos a hacer un blog post</h1>
-                <p>Y este es el parrafo de inicio</p>
-                <p>subcribete y dale like</p>
-            </div>
         </div>
-    </body>
+        <div id="post">
+            <h1>Aqui vamos a hacer un blog post</h1>
+            <p>Y este es el parrafo de inicio</p>
+            <p>Este es otro párrafo </p>
+            <h1>Aqui vamos a hacer un blog post</h1>
+            <p>Y este es el parrafo de inicio</p>
+            <p>subcribete y dale like</p>
+        </div>
+    </div>
+</body>
+
 </html>
