--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
             <p>Y este es el parrafo de inicio</p>
             <p>subcribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor para Meraki Vinoteca &lt;3
+        </div>
     </div>
 </body>
 
