Se agrego tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,8 +13,8 @@
                     cabecera</span>
         </div>
         <div id="post">
-            <h1>Aqui vamos a hacer un blog post</h1>
-            <p>Y este es el parrafo de inicio</p>
+            <h1>Aquí vamos a hacer un blog post</h1>
+            <p>Y este es el párrafo de inicio</p>
             <p>Este es otro párrafo </p>
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
