Agregando nuevas tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,9 +16,9 @@
             <h1>Aquí vamos a hacer un blog post</h1>
             <p>Y este es el párrafo de inicio</p>
             <p>Este es otro párrafo </p>
-            <h1>Aqui vamos a hacer un blog post</h1>
-            <p>Y este es el parrafo de inicio</p>
-            <p>subcribete y dale like</p>
+            <h1>Aquí vamos a hacer un blog post</h1>
+            <p>Y este es el párrafo de inicio</p>
+            <p>subscríbete y dale like</p>
         </div>
         <div id="footer">
             Hecho con amor para Meraki Vinoteca &lt;3
