--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>subscr&iacute;bete y dale like</p>
+	    <p>Solo dejo esta l&iacute;nea porque estoy probando</p>
         </div>
         <div id="footer">
             Hecho con amor para Meraki Vinoteca &lt;3
