--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,8 @@
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>Este es otro p&aacute;rrafo </p>
-            <h1>Aqu&iacute; vamos a hacer un blog post</h1>
+	    <p><img src="imagenes/malibu.jpg" width="100%" /></p>
+	    <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>subscr&iacute;bete y dale like</p>
 	    <p>Solo dejo esta l&iacute;nea porque estoy probando</p>
