--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>Este es otro p&aacute;rrafo </p>
-	    <p><img src="https://imgur.com/gallery/yEZbTD2" width="100%" /></p>
+	    <p><img src="https://i.imgur.com/SvLsvMr.jpeg" width="100%" /></p>
 	    <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>subscr&iacute;bete y dale like</p>
