--- a/blogpost.html
+++ b/blogpost.html
@@ -10,17 +10,17 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" /> Hyperblog
             <span id="tagline">Tu blog de
-                    cabecera</span>
+                    vinos favorito</span>
         </div>
         <div id="post">
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>Este es otro p&aacute;rrafo </p>
-	    <p><img src="https://i.imgur.com/SvLsvMr.jpeg" width="100%" /></p>
-	    <h1>Aqu&iacute; vamos a hacer un blog post</h1>
+            <p><img src="https://i.imgur.com/SvLsvMr.jpeg" width="100%" /></p>
+            <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>subscr&iacute;bete y dale like</p>
-	    <p>Solo dejo esta l&iacute;nea porque estoy probando</p>
+            <p>Solo dejo esta l&iacute;nea porque estoy probando</p>
         </div>
         <div id="footer">
             Hecho con amor para Meraki Vinoteca &lt;3
