Archivo subido a la web y cambio de imagen a pug

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,10 +13,10 @@
                     vinos favorito</span>
         </div>
         <div id="post">
-            <h1>Aqu&iacute; vamos a hacer un blog post</h1>
+            <h1>Habla pe maskota</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>Este es otro p&aacute;rrafo </p>
-            <p><img src="https://i.imgur.com/SvLsvMr.jpeg" width="100%" /></p>
+            <p><img src="https://www.bunko.pet/__export/1611708686389/sites/debate/img/2021/01/26/9_datos_interesantes_sobre_los_perros_pug_que_tal_vez_no_sabxas.jpeg_1404015752.jpeg" width="100%" /></p>
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el p&aacute;rrafo de inicio</p>
             <p>subscr&iacute;bete y dale like</p>
